<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jamil.pokemonrps.MainActivity">

    <TextView
        android:text="@string/choose_your_pokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/mainTitle"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/label_computer_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:id="@+id/computerLabel"/>

    <TextView
        android:text="@string/label_player_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/computerLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/playerLabel"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bulbasaur"
        android:layout_below="@+id/playerLabel"
        android:layout_alignLeft="@+id/playerLabel"
        android:layout_alignStart="@+id/playerLabel"
        android:layout_marginTop="21dp"
        android:id="@+id/playerBulbasaur"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_bulbasaur_button"
        android:background="?android:selectableItemBackground"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/charmander"
        android:id="@+id/playerCharmander"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_below="@+id/playerBulbasaur"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/playerBulbasaur"
        android:layout_alignStart="@+id/playerBulbasaur"
        android:contentDescription="@string/content_description_charmander_button"
        android:background="?android:selectableItemBackground"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/squirtle"
        android:layout_marginTop="14dp"
        android:id="@+id/playerSquirtle"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_below="@+id/playerCharmander"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/playerCharmander"
        android:layout_alignStart="@+id/playerCharmander"
        android:contentDescription="@string/content_description_squirtle_button"
        android:background="?android:selectableItemBackground"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pokeball"
        android:id="@+id/computerChoice"
        android:scaleType="fitXY"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/computerLabel"
        android:layout_alignEnd="@+id/computerLabel"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_opponents_choice"/>

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/resultTextView"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"/>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:id="@+id/playerPoints"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/computerPoints"
        android:layout_alignBottom="@+id/computerPoints"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:id="@+id/computerPoints"
        android:layout_above="@+id/playerLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"/>

</RelativeLayout>
